# fast-dacvae

./: README.md  benchmark.py  experiment_log.txt  pyproject.toml  requirements.txt  setup.py  test.py
dacvae/: __init__.py  cudnn_forward.py  inductor_fusion.py  optimize.py  triton_snake.py
dacvae/model/: __init__.py  base.py  dacvae.py
dacvae/nn/: __init__.py  bottleneck.py  layers.py  quantize.py
